DBZ-5857 Fake DNS resolver allowing the use of MongoDB containers under Docker Desktop without hots file modifications